@@ -1020,11 +1020,11 @@
 </td>
 <td class=cellinside><br /> A plot is produced which allows comprehensive presentation of data precision<br /> and its dispersion around a central value as well as illustration of a<br /> kernel density estimate, histogram and/or dot plot of the dose values.<br />
 </td>
-<td class=cellinside>0.1.3
+<td class=cellinside>0.1.4
 </td>
-<td class=cellinside>2015-09-24
+<td class=cellinside>2015-10-11
 </td>
-<td class=cellinside>16:32:32
+<td class=cellinside>13:11:37
 
 </td>
 <td class=cellinside><br /> Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,<br /> IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot<br /> introduced by Galbraith & Green (1990)<br />  R Luminescence Package Team
