@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Sun Oct 11 12:06:55 2015
+% Sun Oct 11 13:18:49 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -98,7 +98,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   51 & merge\_RLum.Results & General accessor function for RLum S4 class objects & $<$br /$>$ Function calls object-specific get functions for RLum S4 class objects.$<$br /$>$ & 0.1
  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  52 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.3 & 2015-09-24 & 16:32:32
+  52 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.4 & 2015-10-11 & 13:11:37
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
   53 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.8 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
